--- a/playbulb-polymer/package.json
+++ b/playbulb-polymer/package.json
@@ -8,7 +8,7 @@
   "author": "Sandro Kock <sandro.kock@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^3.7.1",
+    "eslint": ">=4.18.2",
     "eslint-config-standard": "^6.2.0",
     "eslint-config-standard-jsx": "^3.2.0",
     "eslint-plugin-promise": "^2.0.1",
